template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Plantilla per desplegar un servidor web EC2 - Classe DevOps'

Parameters:
  NomAlumne:
    Type: String
    Description: 'Escriu el teu nom o cognom (en minúscules i sense accents) per fer el recurs únic.'
    MinLength: 3
    MaxLength: 20
    AllowedPattern: '[a-z0-9\-]+'
    ConstraintDescription: 'Només minúscules, números i guions.'

Resources:
  # 1. El grup de seguretat (Tallafocs) per permetre el tràfic web
  MeuGrupDeSeguretat:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Permetre HTTP i SSH'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  # 2. La instància EC2 (El servidor)
  MevaInstanciaEC2:
    Type: 'AWS::EC2::Instance'
    Properties:
      # Imatge d'Amazon Linux 2 (Recorda canviar-la segons la teva regió)
      ImageId: 'ami-0e1c4170d9c01184b' 
      InstanceType: 't3.micro' # Capa gratuïta
      SecurityGroups:
        - !Ref MeuGrupDeSeguretat
      # Aquí posem el codi que s'executarà en arrencar el servidor
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<h1>Hola ${NomAlumne}!</h1><p>Aquest servidor s'ha desplegat automàticament amb CodePipeline.</p>" > /var/www/html/index.html
      Tags:
        - Key: 'Name'
          Value: !Sub 'Servidor-${NomAlumne}'

Outputs:
  IPPublica:
    Description: 'IP pública del servidor web'
    Value: !GetAtt MevaInstanciaEC2.PublicIp
